service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-svc
spec:
  selector:
    app: django-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
